tests/cases/compiler-development/artifact/errors/diagnostic-generic-private-function.diagnostic
diagnostic error code=M0001 family=module message="function 'Hidden::identity' is not public" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-private-function.ari" display="tests/cases/generics/errors/generic-private-function.ari" bytes=112
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-private-function.ari" line=8 column=3 end_line=8 end_column=9 byte_start=85 byte_end=91 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-private-function.ari:8:3\n   |\n 8 |   Hidden::identity<i64>(1)\n   |   ^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/generics/errors/generic-private-function.ari" line=2 column=6 end_line=2 end_column=14 byte_start=18 byte_end=26 message="private function 'Hidden::identity' declared here"
  Snippet label=1 text="  --> tests/cases/generics/errors/generic-private-function.ari:2:6\n   |\n 2 |   fn identity[T](value: T) -> T {\n   |      ^^^^^^^^"
  Note index=0 location=none message="module visibility is enforced at the use site and the private declaration is shown as a secondary label"
  Help index=0 location=none message="mark function 'Hidden::identity' as pub or access it from inside module 'Hidden'"
